<resources>
    <string name="app_name">Proyecto_mkt_v05</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_impulso">Impulso</string>
    <string name="menu_mercaderismo">Mercaderismo</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_log_out">Cerrar Sesion</string>

    <string name="text_nombres">Nombres</string>
    <string name="text_apellidos">Apellidos</string>
    <string name="text_email">Email</string>
    <string name="text_contrasenha">Contraseña</string>

    <string name="text_ocupacion">Ocupación (ej: Impulso, Mercaderismo)</string>

    <string-array name="ocupaciones">
        <item>Impulso</item>
        <item>Mercaderismo</item>
        <item>Otro-test</item>
    </string-array>

    <string name="test">Test</string>

    <string name="text_iniciar_sesion">Iniciar Sesión</string>
    <string name="text_mantener_sesion_abierta">Mantener la sesión abierta</string>
    <string name="text_registrar_usuario">Registrar usuario</string>
    <string name="text_crear_cuenta">Crear cuenta</string>
    <string name="text_enviar">Enviar</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_ver_contrasenha">Ver contraseña</string>
    <string name="text_marcar_asistencia">Marcar asistencia</string>
    <string name="text_buscar">Buscar</string>

    <string name="text_nombre_del_cliente">Nombre del cliente:</string>
    <string name="text_codigo_del_cliente">Código del cliente:</string>
    <string name="text_corregir">Corregir</string>
    <string name="text_enviar_correcciones">Enviar Correcciones</string>
    <string name="text_nombre_alternativo">Nombre alternativo</string>
    <string name="text_direccion_del_cliente">Dirección del cliente:</string>
    <string name="text_nombre_del_mercado">Nombre del Mercado:</string>

    <string name="text_ingresar_ventas">Ingresar ventas</string>
    <string name="text_agregar_ventas">Agregar una venta</string>
    <string name="text_terminar_ventas">Terminar ventas</string>

    <string name="text_descripcion_imagen_comida">Comida para mascotas</string>
    <string name="text_tipo_de_producto">Tipo de producto</string>
    <string name="text_marca_del_producto">Marca del producto</string>
    <string name="text_nombre_del_producto">Nombre del producto</string>
    <string name="text_cantidad_vendida">Cantidad vendida</string>
    <string name="text_monto_vendido">Monto vendido</string>
    
    

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>