<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto_mkt_v05.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_impulso"
        android:name="com.example.proyecto_mkt_v05.ui.ContenedorImpulsoFragment"
        android:label="@string/menu_impulso"
        tools:layout="@layout/fragment_contenedor_impulso" />

    <fragment
        android:id="@+id/nav_mercaderismo"
        android:name="com.example.proyecto_mkt_v05.ui.MercaderismoFragment"
        android:label="@string/menu_mercaderismo"
        tools:layout="@layout/fragment_mercaderismo" />

    <!--
    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.proyecto_mkt_v05.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
        -->
    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.proyecto_mkt_v05.ui.LogoutFragment"
        android:label="@string/menu_log_out"
        tools:layout="@layout/fragment_logout" />
</navigation>