<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reg_and_log.RegistrarUsuarioFragment"
    android:id="@+id/fragment_registro"
    android:background="#FAFAFA">

    <EditText
        android:id="@+id/id_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_nombres"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/id_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_apellidos"
        android:inputType="textCapWords"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/id_nombres"
        />

    <EditText
        android:id="@+id/id_correo_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/id_apellidos"
        />

    <EditText
        android:id="@+id/id_contrasenha_nueva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_contrasenha"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/id_correo_nuevo"
        />

    <ImageButton
        android:id="@+id/id_boton_ver_nueva_contrasenha"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_visibility_off_24px"
        android:background="#00000000"
        android:layout_alignTop="@+id/id_contrasenha_nueva"
        android:layout_alignBottom="@+id/id_contrasenha_nueva"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/text_ver_contrasenha"
        />

    <AutoCompleteTextView
        android:id="@+id/id_cargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_ocupacion"
        android:completionThreshold="1"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/id_contrasenha_nueva"
        />

    <ImageButton
        android:id="@+id/id_boton_ver_opciones_de_cargos"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_arrow_drop_down_24px"
        android:background="#00000000"
        android:layout_alignTop="@+id/id_cargo"
        android:layout_alignBottom="@+id/id_cargo"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/text_ocupacion"
        android:clickable="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_below="@+id/id_cargo">

        <Button
            android:id="@+id/id_boton_crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_crear_cuenta"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            />

        <Button
            android:id="@+id/id_boton_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cancelar"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            />

    </LinearLayout>

</RelativeLayout>